external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/dot_incomplete.ide.exp
note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:14:23
   │
14 │         let _tmp1 = _s.;                // incomplete with `;` (next line should parse)
   │                       ^ Possible dot names: 'a'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:14:24
   │
14 │         let _tmp1 = _s.;                // incomplete with `;` (next line should parse)
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:15:24
   │
15 │         let _tmp2 = _s.a.;  // incomplete with `;` (next line should parse)
   │                        ^ Possible dot names: 'a'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:15:25
   │
15 │         let _tmp2 = _s.a.;  // incomplete with `;` (next line should parse)
   │                         ^ Possible dot names: 'x'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:15:26
   │
15 │         let _tmp2 = _s.a.;  // incomplete with `;` (next line should parse)
   │                          ^
   │                          │
   │                          Unexpected ';'
   │                          Expected an identifier or a decimal number

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:16:24
   │
16 │         let _tmp3 = _s.a.   // incomplete without `;` (unexpected `let`)
   │                        ^ Possible dot names: 'a'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:16:25
   │
16 │         let _tmp3 = _s.a.   // incomplete without `;` (unexpected `let`)
   │                         ^ Possible dot names: 'x'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/dot_incomplete.move:17:9
   │
17 │         let _tmp4 = _s.
   │         ^^^
   │         │
   │         Unexpected 'let'
   │         Expected an identifier or a decimal number

